--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Mindcurvdemo",
   "vendor": "vtex",
-  "version": "0.0.1",
+  "version": "1.0.0-beta.0",
   "title": "Mindcurv demo app",
   "description": "lets try",
   "billingOptions": {
