--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Mindcurvdemo",
-  "vendor": "vtex",
+  "vendor": "emeapartners",
   "version": "1.0.0-beta.0",
   "title": "Mindcurv demo app",
   "description": "lets try",
